2011-04-05 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* extras/src/InterfaceRoot.cxx: Files in input.txt can also be separated by ',' which is very useful for grid usage
	* Makefile : updates for more convenience
	* tag KLFitter-00-04-02

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch> 

	* remove include and src directories 
	* add enums to LikelihoodTopLeptonJets_JetAngles 
	* fix main Makefile 
	* tag KLFitter-00-04-01 
	
2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* restructuring the package: making two libraries (library and extras)
	* Makefile clean-up in example/top_ljets
	* tag KLFitter-00-04-00

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* merging back from KLFitter-00-03-42-branch
	* optimize LikelihoodTopLeptonJets (possible by taking out eta and phi parameters for jets)
	* add LikelihoodTopLeptonsJets_JetAngles (which is the old LikelihoodTopLeptonJets)
	* introduce enumerators for lepton type
	* introduce ConvergenceStatus bit word and masks
	* update README
	* clean-up Makefile
	* some clean-up
	* update ExampleCode.C and 
	* tag KLFitter-00-03-43

2011-03-02 Johannes Erdmann <johannes.erdmann@cern.ch>

	* bug fix in Permutations class (photons only)
	* Makefile update
	* tag KLFitter-00-03-42

2011-02-24 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>, Johannes Erdmann <johannes.erdmann@cern.ch>

	* update of README
	* addition of ExampleCode.C
	* change runKLFitter.c to work with D3PDs
	* re-name the GTT example to runKLFitter_GTT.c
	* some clean-up
	* minor bug fixes
	* tag KLFitter-00-03-41

2011-02-11 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceD3PD/GoTopTree: minor bugfixes
	* tag KLFitter-00-03-40

2011-01-31 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceD3PD: replace Muon_DetEta by Muon_Eta
	                 electron variables: cluster for E, track for eta/phi
	* tag KLFitter-00-03-39